--- a/lab02/index.html
+++ b/lab02/index.html
@@ -15,6 +15,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 
     <h1>Bootstrap FSD-02</h1>
+    <p>
+        <i>
+            Start Date: 01 August 2022
+            <br>
+            Topics: 
+            <ol>
+                <li>Big Data Technologies</li>
+                <li>Mobile And Wireless Security</li>
+                <li>Software Development and Management</li>
+                <li>Computer Vision and Graphics</li>
+            </ol>
+        </i>
+    </p>
     
 </body>
 </html>
