--- a/lab02/index.html
+++ b/lab02/index.html
@@ -13,14 +13,53 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.innovators-hub.in/">IH x MIT-WPU</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  About Us
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="https://www.innovators-hub.in/ourteam">Meet the Team</a></li>
+                  <li><a class="dropdown-item" href="https://www.innovators-hub.in/achievements">Achievements</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">How to Join Us!</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Lets Go</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     <h1>Bootstrap FSD-02</h1>
     <br>
     <h2>Organised by Innovators Hub!</h2>
     <p>
-        <i>
+        
             Start Date: 01 August 2022
-            <br>
+            <!-- <div class="bg-success p-2 text-white">This is default success background</div> -->
+            <i>
+            <div class="bg-warning p-2 text-black bg-opacity-50">
+                <br>
             Topics: 
             <ol>
                 <li>Big Data Technologies</li>
@@ -28,6 +67,18 @@
                 <li>Software Development and Management</li>
                 <li>Computer Vision and Graphics</li>
             </ol>
+            </div>
+            <!-- <div class="bg-success p-2 text-dark bg-opacity-50">This is 50% opacity success background</div>
+            <div class="bg-success p-2 text-dark bg-opacity-25">This is 25% opacity success background</div>
+            <div class="bg-success p-2 text-dark bg-opacity-10">This is 10% opacity success background</div> -->
+            <!-- <br>
+            Topics: 
+            <ol>
+                <li>Big Data Technologies</li>
+                <li>Mobile And Wireless Security</li>
+                <li>Software Development and Management</li>
+                <li>Computer Vision and Graphics</li>
+            </ol> -->
         </i>
     </p>
     <form>
