--- a/lab02/index.html
+++ b/lab02/index.html
@@ -40,12 +40,12 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="https://github.com/yashlad27">Yash Lad</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Lets Go</button>
+              <button class="btn btn-outline-success" type="submit">Go</button>
             </form>
           </div>
         </div>
@@ -67,6 +67,11 @@
                 <li>Software Development and Management</li>
                 <li>Computer Vision and Graphics</li>
             </ol>
+        </i>
+            <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/alessandro-bianchi-_kdTyfnUFAc-unsplash.jpg" 
+            class="rounded float-start" alt="light_bulb">
+            <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/tianyi-ma-WiONHd_zYI4-unsplash.jpg" 
+            class="rounded float-end" alt="macbook">
             </div>
             <!-- <div class="bg-success p-2 text-dark bg-opacity-50">This is 50% opacity success background</div>
             <div class="bg-success p-2 text-dark bg-opacity-25">This is 25% opacity success background</div>
@@ -79,7 +84,7 @@
                 <li>Software Development and Management</li>
                 <li>Computer Vision and Graphics</li>
             </ol> -->
-        </i>
+        
     </p>
     <form>
         
