--- a/lab02/index.html
+++ b/lab02/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="card">
-                <img src="https://unsplash.com/photos/WiONHd_zYI4" class="card-img-top" alt="macbook-pro-img">
+                <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/alessandro-bianchi-_kdTyfnUFAc-unsplash.jpg" class="card-img-top" alt="macbook-pro-img">
                 <div class="card-body">
                   <h5 class="card-title">Register Here</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
@@ -84,11 +84,11 @@
               </div>
               
               <div class="card">
-                <img src="https://unsplash.com/photos/RDolnHtjVCY" class="card-img-top" alt="surface-pro-img">
+                <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/alessandro-bianchi-_kdTyfnUFAc-unsplash.jpg" class="card-img-top" alt="surface-pro-img">
                 <div class="card-body">
                   <h5 class="card-title">Register Here</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
-                  <a href="https://www.robinwieruch.de/mac-setup-web-development/" class="btn btn-primary">Let's Go!</a>
+                  <a href="https://github.com/felixrieseberg/windows-development-environment/blob/master/README.md" class="btn btn-primary">Let's Go!</a>
                 </div>
               </div>
               <!-- <div class="card" aria-hidden="true">
