--- a/lab02/index.html
+++ b/lab02/index.html
@@ -63,6 +63,8 @@
             Topics: 
             <ol>
                 <li>Big Data Technologies</li>
+                <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" 
+                alt="big_data_pic" height="550px" width="550px">
                 <li>Mobile And Wireless Security</li>
                 <li>Software Development and Management</li>
                 <li>Computer Vision and Graphics</li>
@@ -75,7 +77,7 @@
             </div>
 
             <div class="card">
-                <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/alessandro-bianchi-_kdTyfnUFAc-unsplash.jpg" class="card-img-top" alt="macbook-pro-img">
+                <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1720&q=80" class="card-img-top" alt="macbook-pro-img" height="550px" width="5px">
                 <div class="card-body">
                   <h5 class="card-title">Register Here</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
@@ -84,7 +86,7 @@
               </div>
               
               <div class="card">
-                <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/alessandro-bianchi-_kdTyfnUFAc-unsplash.jpg" class="card-img-top" alt="surface-pro-img">
+                <img src="https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1180&q=80" class="card-img-top" alt="surface-pro-img" height="550px" width="550px">
                 <div class="card-body">
                   <h5 class="card-title">Register Here</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
