adding light_bulb

--- a/lab02/index.html
+++ b/lab02/index.html
@@ -50,6 +50,7 @@
           </div>
         </div>
       </nav>
+      <img src="light_bulb.jpg" height="550px" width="550px">
     <h1>Bootstrap FSD-02</h1>
     <br>
     <h2>Organised by Innovators Hub!</h2>
