trying height n width

--- a/lab02/index.html
+++ b/lab02/index.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </nav>
-      <img src="light_bulb.jpg" height="550px" width="550px">
+      <img src="light_bulb.jpg" height="55px" width="55px">
     <h1>Bootstrap FSD-02</h1>
     <br>
     <h2>Organised by Innovators Hub!</h2>
@@ -65,8 +65,9 @@
             <ol>
                 <li>Big Data Technologies</li>
                 <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" 
-                alt="big_data_pic" height="550px" width="550px">
-                <li>Mobile And Wireless Security</li>
+                alt="big_data_pic" height="500px" width="650px">
+                <li>Mobile And Wireless Security</li> <img src="https://images.unsplash.com/photo-1580894742597-87bc8789db3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                alt="wireless_pic" height="480px" width="650px">
                 <li>Software Development and Management</li>
                 <li>Computer Vision and Graphics</li>
             </ol>
@@ -78,7 +79,7 @@
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1720&q=80" class="card-img-top" alt="macbook-pro-img" height="550px" width="5px">
+                <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1720&q=80" class="card-img-top" alt="macbook-pro-img" height="550px" width="550px">
                 <div class="card-body">
                   <h5 class="card-title">Register Here</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
