--- a/lab02/index.html
+++ b/lab02/index.html
@@ -63,13 +63,13 @@
                 <br>
             Topics: 
             <ol>
-                <li>Big Data Technologies</li>
+                <li style="font-size: 40px">Big Data Technologies</li>
                 <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" 
-                alt="big_data_pic" height="500px" width="650px">
-                <li>Mobile And Wireless Security</li> <img src="https://images.unsplash.com/photo-1580894742597-87bc8789db3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                alt="wireless_pic" height="480px" width="650px">
-                <li>Software Development and Management</li>
-                <li>Computer Vision and Graphics</li>
+                alt="big_data_pic" height="300px" width="650px">
+                <li style="font-size: 40px">Mobile And Wireless Security</li> <img src="https://images.unsplash.com/photo-1580894742597-87bc8789db3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                alt="wireless_pic" height="300px" width="650px">
+                <li style="font-size: 40px">Software Development and Management</li>
+                <li style="font-size: 40px">Computer Vision and Graphics</li>
             </ol>
         </i>
             <!-- <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/alessandro-bianchi-_kdTyfnUFAc-unsplash.jpg" 
@@ -81,7 +81,7 @@
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1720&q=80" class="card-img-top" alt="macbook-pro-img" height="550px" width="550px">
                 <div class="card-body">
-                  <h5 class="card-title">Register Here</h5>
+                  <h5 class="card-title">Get Started with MACOS Dev Setup</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
                   <a href="https://www.robinwieruch.de/mac-setup-web-development/" class="btn btn-primary">Let's Go!</a>
                 </div>
@@ -90,11 +90,11 @@
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1180&q=80" class="card-img-top" alt="surface-pro-img" height="550px" width="550px">
                 <div class="card-body">
-                  <h5 class="card-title">Register Here</h5>
+                  <h5 class="card-title">Get Started with Windows Dev Setup</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
                   <a href="https://github.com/felixrieseberg/windows-development-environment/blob/master/README.md" class="btn btn-primary">Let's Go!</a>
                 </div>
-              </div>
+              </div>`
               <!-- <div class="card" aria-hidden="true">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
