--- a/lab02/index.html
+++ b/lab02/index.html
@@ -50,13 +50,13 @@
           </div>
         </div>
       </nav>
-      <img src="light_bulb.jpg" height="55px" width="55px">
+      <!-- <img src="light_bulb.jpg" height="150px" width="150px"> -->
     <h1>Bootstrap FSD-02</h1>
     <br>
     <h2>Organised by Innovators Hub!</h2>
     <p>
         
-            Start Date: 01 August 2022
+            <h3 style="font-style: bold; color: coral; border-color: black;">Start Date: 01 August 2022</h3>
             <!-- <div class="bg-success p-2 text-white">This is default success background</div> -->
             <i>
             <div class="bg-warning p-2 text-black bg-opacity-50">
@@ -72,10 +72,6 @@
                 <li style="font-size: 40px">Computer Vision and Graphics</li>
             </ol>
         </i>
-            <!-- <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/alessandro-bianchi-_kdTyfnUFAc-unsplash.jpg" 
-            class="img-thumbnail" alt="light_bulb">
-            <img src="/Users/yash/Documents/GitHub/FullStackDev_Semester05/lab02/tianyi-ma-WiONHd_zYI4-unsplash.jpg" 
-            class="img-thumbnail" alt="macbook"> -->
             </div>
 
             <div class="card">
@@ -95,33 +91,6 @@
                   <a href="https://github.com/felixrieseberg/windows-development-environment/blob/master/README.md" class="btn btn-primary">Let's Go!</a>
                 </div>
               </div>`
-              <!-- <div class="card" aria-hidden="true">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title placeholder-glow">
-                    <span class="placeholder col-6"></span>
-                  </h5>
-                  <p class="card-text placeholder-glow">
-                    <span class="placeholder col-7"></span>
-                    <span class="placeholder col-4"></span>
-                    <span class="placeholder col-4"></span>
-                    <span class="placeholder col-6"></span>
-                    <span class="placeholder col-8"></span>
-                  </p>
-                  <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
-                </div>
-              </div> -->
-            <!-- <div class="bg-success p-2 text-dark bg-opacity-50">This is 50% opacity success background</div>
-            <div class="bg-success p-2 text-dark bg-opacity-25">This is 25% opacity success background</div>
-            <div class="bg-success p-2 text-dark bg-opacity-10">This is 10% opacity success background</div> -->
-            <!-- <br>
-            Topics: 
-            <ol>
-                <li>Big Data Technologies</li>
-                <li>Mobile And Wireless Security</li>
-                <li>Software Development and Management</li>
-                <li>Computer Vision and Graphics</li>
-            </ol> -->
     </p>
     <form>
         
