--- a/lab02/index.html
+++ b/lab02/index.html
@@ -54,41 +54,43 @@
     <h1>Bootstrap FSD-02</h1>
     <br>
     <h2>Organised by Innovators Hub!</h2>
-    <p>
-        
-            <h3 style="font-style: bold; color: coral; border-color: black;">Start Date: 01 August 2022</h3>
+    <p> 
+            <h3 style="font-style: bold; color: coral;">Start Date: 01 August 2022</h3>
             <!-- <div class="bg-success p-2 text-white">This is default success background</div> -->
-            <i>
             <div class="bg-warning p-2 text-black bg-opacity-50">
                 <br>
-            Topics: 
+                <h4 style="margin: bottom 10px;">Topics:</h4> 
             <ol>
-                <li style="font-size: 40px">Big Data Technologies</li>
+                <li style="font-size: 30px">Big Data Technologies</li>
                 <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" 
-                alt="big_data_pic" height="300px" width="650px">
-                <li style="font-size: 40px">Mobile And Wireless Security</li> <img src="https://images.unsplash.com/photo-1580894742597-87bc8789db3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                alt="wireless_pic" height="300px" width="650px">
-                <li style="font-size: 40px">Software Development and Management</li>
-                <li style="font-size: 40px">Computer Vision and Graphics</li>
+                alt="big_data_pic" height="400px" width="650px">
+                <li style="font-size: 30px">Mobile And Wireless Security</li> 
+                <img src="https://images.unsplash.com/photo-1580894742597-87bc8789db3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                alt="wireless_pic" height="400px" width="650px">
+                <li style="font-size: 30px">Software Development and Management</li>
+                <img src="https://images.unsplash.com/photo-1596742578443-7682ef5251cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1908&q=80" 
+                alt="SDMT" height="400px" width="650px">
+                <li style="font-size: 30px">Computer Vision and Graphics</li>
+                <img src="https://images.unsplash.com/photo-1504639725590-34d0984388bd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
+                alt="Computer Vision" height="400px" width="650px">
             </ol>
-        </i>
             </div>
-
+            <!-- card code -->
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1720&q=80" class="card-img-top" alt="macbook-pro-img" height="550px" width="550px">
                 <div class="card-body">
                   <h5 class="card-title">Get Started with MACOS Dev Setup</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
-                  <a href="https://www.robinwieruch.de/mac-setup-web-development/" class="btn btn-primary">Let's Go!</a>
+                  <a href="https://www.robinwieruch.de/mac-setup-web-development/" class="btn btn-primary">MACOS Guide</a>
                 </div>
               </div>
-              
+              <!-- card code  -->
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1180&q=80" class="card-img-top" alt="surface-pro-img" height="550px" width="550px">
                 <div class="card-body">
                   <h5 class="card-title">Get Started with Windows Dev Setup</h5>
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
-                  <a href="https://github.com/felixrieseberg/windows-development-environment/blob/master/README.md" class="btn btn-primary">Let's Go!</a>
+                  <a href="https://github.com/felixrieseberg/windows-development-environment/blob/master/README.md" class="btn btn-primary">Windows</a>
                 </div>
               </div>`
     </p>
