--- a/lab02/index.html
+++ b/lab02/index.html
@@ -84,6 +84,40 @@
                   <a href="https://www.robinwieruch.de/mac-setup-web-development/" class="btn btn-primary">MACOS Guide</a>
                 </div>
               </div>
+              <p>
+                <h3>MACOS Features:</h3>
+                <!-- FaceTime. SharePlay: Watch together. 
+                Messages. Shared with You. 
+                Safari. Tab Groups. 
+                Focus. Focus. 
+                Notifications. New look for notifications. 
+                Notes. Tags. 
+                Quick Note. Easy to access. 
+                Universal Control. Use your keyboard, mouse and trackpad across Mac and iPad. -->
+
+                <table>
+                  <tr>
+                    <th>FaceTime</th>
+                    <th>Messages</th>
+                    <th>Safari</th>
+                    <th>Focus</th>
+                    <th>Notifications</th>
+                    <th>Notes</th>
+                    <th>Quick Notes</th>
+                    <th>Universal Control</th>
+                  </tr>
+                  <tr>
+                    <td>SharePlay: Watch together</td>
+                    <td> Shared with You</td>
+                    <td>Tab Groups</td>
+                    <td>Focus</td>
+                    <td>New look at Notifications</td>
+                    <td>Tags</td>
+                    <td>Easy to Access</td>
+                    <td>Use your keyboard, mouse and trackpad across Mac and iPad.</td>
+                  </tr>
+                </table>
+              </p>
               <!-- card code  -->
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1180&q=80" class="card-img-top" alt="surface-pro-img" height="550px" width="550px">
