--- a/lab02/index.html
+++ b/lab02/index.html
@@ -117,7 +117,32 @@
                   <p class="card-text">Click below and get started with your perfect journey to Software Development!</p>
                   <a href="https://github.com/felixrieseberg/windows-development-environment/blob/master/README.md" class="btn btn-primary">Windows</a>
                 </div>
-              </div>`
+              </div>
+              <p>
+                <h3>MACOS Features:</h3>
+                <table>
+                  <tr>
+                    <th>FaceTime</th>
+                    <th>Messages</th>
+                    <th>Safari</th>
+                    <th>Focus</th>
+                    <th>Notifications</th>
+                    <th>Notes</th>
+                    <th>Quick Notes</th>
+                    <th>Universal Control</th>
+                  </tr>
+                  <tr>
+                    <td>SharePlay: Watch together</td>
+                    <td> Shared with You</td>
+                    <td>Tab Groups</td>
+                    <td>Focus</td>
+                    <td>New look at Notifications</td>
+                    <td>Tags</td>
+                    <td>Easy to Access</td>
+                    <td>Use your keyboard, mouse and trackpad across Mac and iPad.</td>
+                  </tr>
+                </table>
+              </p>
     </p>
     <form>
         
