methods to print

--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Tutorial</title>
-    <script defer src="first.js"></script>
+    <!-- <script defer src="first.js"></script> -->
 </head>
 <body>
     <p>
         <h2>Javascript Basics</h2>
+
+        <div id="FirstContainer" class="container">
+            <button id="click">Click Me</button>
+        </div>
+        <div id="SecondContainer" class="container">
+            <p>This is a paragraph</p>
+        </div>
     </p>
 </body>
+    <script src="first.js"></script>
+<script>
+    // Console API:
+    console.log("Hello World");
+    //alert("me");
+    //document.write("this is document write")
+    console.warn("This is a warning text");
+    console.error("This is an error text");
+</script> 
 </html>
