--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -27,5 +27,14 @@
     //document.write("this is document write")
     console.warn("This is a warning text");
     console.error("This is an error text");
-</script> 
+
+    // JS VARIABLES:
+    // Variables : containers to store data values
+
+    var num1=24;
+    var num2=34;
+    console.log(num1+num2);
+    alert(num1+num2);
+
+    </script> 
 </html>
