--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -34,7 +34,33 @@
     var num1=24;
     var num2=34;
     console.log(num1+num2);
-    alert(num1+num2);
+    //alert(num1+num2);
 
-    </script> 
+    // Datatypes in JS:
+    var str1 = "this is a string";
+    var str2 = 'this is a string';
+
+    // objects:
+    var marks = {
+        ravi : 34,
+        shubham : 78,
+        harry: 99.97
+    }
+    console.log(num1)
+    console.log(marks);
+
+    // booleans
+    var a = true;
+    var b = false;
+    console.log(a, b);
+
+    // undefined: 
+    var und = undefined;
+    console.log(und);
+
+    // arrays -> collections of strings, int, bools
+    var arr = [1,2,3,4,5];
+    var arr_st = [1, 2, 3, "yash", 6, 7, "CSS"];
+    
+</script> 
 </html>
