functions is js

--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -20,6 +20,7 @@
     </p>
 </body>
     <script src="first.js"></script>
+    <script src="functions.js"></script>
 <script>
     // Console API:
     console.log("Hello World");
