--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -21,6 +21,7 @@
 </body>
     <script src="first.js"></script>
     <script src="functions.js"></script>
+    <script src="arrays.js"></script>
 <script>
     // Console API:
     console.log("Hello World");
