--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -22,8 +22,10 @@
     <script src="first.js"></script>
     <script src="functions.js"></script>
     <script src="arrays.js"></script>
+    <script src="array_methods.js"></script>
 <script>
     // Console API:
+    console.log("################");
     console.log("Hello World");
     //alert("me");
     //document.write("this is document write")
