--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -23,6 +23,7 @@
     <script src="functions.js"></script>
     <script src="arrays.js"></script>
     <script src="array_methods.js"></script>
+    <script src="string_methods.js"></script>
 <script>
     // Console API:
     console.log("################");
@@ -65,6 +66,6 @@
     // arrays -> collections of strings, int, bools
     var arr = [1,2,3,4,5];
     var arr_st = [1, 2, 3, "yash", 6, 7, "CSS"];
-    
+    console.log("#############")
 </script> 
 </html>
