--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -19,14 +19,15 @@
         </div>
     </p>
 </body>
-    <script src="first.js"></script>
+    <!-- <script src="first.js"></script>
     <script src="functions.js"></script>
     <script src="arrays.js"></script>
     <script src="array_methods.js"></script>
-    <script src="string_methods.js"></script>
+    <script src="string_methods.js"></script> -->
+    <script src="dates.js"></script>
 <script>
     // Console API:
-    console.log("################");
+    //console.log("################");
     console.log("Hello World");
     //alert("me");
     //document.write("this is document write")
