--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Tutorial</title>
     <!-- <script defer src="first.js"></script> -->
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        .container{
+            border: 2px solid red;
+            margin: 3px 0;
+            background: cyan;
+            padding: 9px;
+        }
+        .bg-primary{
+            background-color: violet;
+        }
+        .text-success{
+            color: wheat;
+        }
+    </style>
 </head>
 <body>
     <p>
