--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -31,6 +31,7 @@
 
         <div id="FirstContainer" class="container">
             <button id="click">Click Me</button>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam libero animi porro iste vero doloremque dolor fuga natus ipsa temporibus neque odit, eum sint tempora aspernatur? Tempora veritatis doloremque ullam.</p>
         </div>
         <div id="SecondContainer" class="container">
             <p>This is a paragraph</p>
@@ -41,8 +42,9 @@
     <script src="functions.js"></script>
     <script src="arrays.js"></script>
     <script src="array_methods.js"></script>
-    <script src="string_methods.js"></script> -->
-    <script src="dates.js"></script>
+    <script src="string_methods.js"></script> 
+    <script src="dates.js"></script> -->
+    <script src="dom_mani.js"></script>
 <script>
     // Console API:
     //console.log("################");
