adding js and css

--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -21,7 +21,7 @@
             background-color: violet;
         }
         .text-success{
-            color: wheat;
+            color: white;
         }
     </style>
 </head>
