--- a/lab03/index.html
+++ b/lab03/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="login-page.css">
-  <script defer src="login-page.js"></script>
+  <link rel="stylesheet" href="login.css">
+  <script defer src="login.js"></script>
 </head>
 
 <body>
@@ -18,8 +18,13 @@
     </div>
     
     <form id="login-form">
+      <input type="text" name="email-id" id="username-field" class="login-form-field" placeholder="Email-id">
       <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+      
       <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+      <label for="gender">Gender: </label>  
+      <input type="radio" id="gender" name="gender" class="login-form-field" value="male"/>Male  
+      <input type="radio" id="gender" name="gender" class="login-form-field" value="female"/>Female   
       <input type="submit" value="Login" id="login-form-submit">
     </form>
   
