--- a/JS_Basics/ZTM_JavaScript/index.html
+++ b/JS_Basics/ZTM_JavaScript/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>JavaScript in HTML</h1>
-    <script type="text/javascript" src="keyless_car.js">
+    <script type="text/javascript" src="arrays.js">
         // alert("hello");
     </script>
 </body>
