getting data from user using JS

--- a/Node_MySQL/client/index.html
+++ b/Node_MySQL/client/index.html
@@ -24,9 +24,7 @@
                 <th>Delete</th>
                 <th>Edit</th>
             </thead>
-            <tbody>
-
-            </tbody>
+            <tbody></tbody>
         </table>
     </main>
     <scripe src ="index.js"></scripe>
