--- a/Node_MySQL/client/index.html
+++ b/Node_MySQL/client/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Node+MySQL</title>
+    <title>web app</title>
 </head>
 <body>
     <main>
@@ -12,8 +14,8 @@
 
         <br><br><br>
         <div>
-            <input placeholder="search by name" id="search-input">
-            <button id="search-btn">Search</button>
+           <input placeholder="search by name" id="search-input">
+           <button id="search-btn">Search</button>
         </div>
 
         <table id="table">
@@ -26,7 +28,13 @@
             </thead>
             <tbody></tbody>
         </table>
+
+        <section hidden id="update-row">
+            <label>Name:</label>
+            <input type="text" id="update-name-input">
+            <button id="update-row-btn">Update</button>
+        </section>
     </main>
-    <scripe src ="index.js"></scripe>
+    <script src="index.js"></script>
 </body>
 </html>
